docs : update auth handler
